<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="12dp"
        android:paddingStart="0dp"
        android:text="@string/gender"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/found_gender_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checkedButton="@id/found_male_radio_button"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/found_male_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="0dp"
            android:text="@string/male"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/found_female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="18sp" />

    </RadioGroup>

</LinearLayout>
