<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <ImageView
            android:id="@+id/widget_icon"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:paddingBottom="8dp"
            android:paddingEnd="4dp"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/widget_title" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/widget_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_results_found" />

    </FrameLayout>

</LinearLayout>
