<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_result_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingBottom="8dp"
        android:scrollHorizontally="true"
        tools:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/widget_result_picture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/child"
        tools:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/widget_result_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lineSpacingMultiplier="1.2"
        android:maxLines="2"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:scrollHorizontally="true"
        android:textSize="15sp"
        tools:text="Don't you think it's ridiculous that Firebase Realtime Database has so poor querying capabilities?\nI mean It's Google for god's sake!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/widget_result_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingEnd="0dp"
            android:paddingStart="4dp"
            android:scrollHorizontally="true"
            android:textSize="15sp"
            tools:text="Yasmeena Plaza, Tanta, Egypt" />

    </LinearLayout>

</LinearLayout>
