<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="16dp">

            <include
                layout="@layout/layout_found_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="32dp"
                android:paddingTop="20dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/add_found_location_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="4dp"
                    android:paddingStart="0dp"
                    android:text="@string/no_location_specified" />

                <ImageView
                    android:id="@+id/add_found_location_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/point_location_on_map"
                    android:src="@drawable/ic_google_maps" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="12dp"
                    android:paddingStart="0dp"
                    android:text="@string/age"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <com.jaygoo.widget.RangeSeekBar
                    android:id="@+id/add_found_age_seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:rsb_indicator_height="32dp"
                    app:rsb_indicator_padding_left="8dp"
                    app:rsb_indicator_padding_right="8dp"
                    app:rsb_indicator_show_mode="alwaysShow"
                    app:rsb_max="30"
                    app:rsb_min="0"
                    app:rsb_mode="range"
                    app:rsb_progress_color="@color/colorAccent"
                    app:rsb_progress_radius="0.8dp"
                    app:rsb_range_interval="1"
                    app:rsb_tick_mark_mode="number"
                    app:rsb_tick_mark_number="1"
                    app:rsb_indicator_radius="2dp"
                    app:rsb_tick_mark_text_array="@array/age_marks" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="12dp"
                    android:paddingStart="0dp"
                    android:text="@string/height"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <com.jaygoo.widget.RangeSeekBar
                    android:id="@+id/add_found_height_seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:rsb_indicator_height="32dp"
                    app:rsb_indicator_padding_left="8dp"
                    app:rsb_indicator_padding_right="8dp"
                    app:rsb_indicator_show_mode="alwaysShow"
                    app:rsb_max="200"
                    app:rsb_min="40"
                    app:rsb_mode="range"
                    app:rsb_progress_color="@color/colorAccent"
                    app:rsb_progress_radius="0.8dp"
                    app:rsb_range_interval="1"
                    app:rsb_tick_mark_mode="number"
                    app:rsb_indicator_radius="2dp"
                    app:rsb_tick_mark_number="1"
                    app:rsb_tick_mark_text_array="@array/height_marks" />

            </LinearLayout>

            <include
                layout="@layout/layout_found_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/layout_found_skin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/layout_found_hair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/add_found_picture_image_view"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:src="@drawable/placeholder" />

                <TextView
                    android:id="@+id/add_found_picture_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/choose_a_picture"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_found_notes_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add_found_publish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorAccent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:padding="16dp"
                android:text="@string/publish"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
