<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/foundPaddingBottom"
            android:paddingEnd="@dimen/foundPaddingEnd"
            android:paddingStart="@dimen/foundPaddingStart"
            android:paddingTop="@dimen/foundPaddingTop">

            <include
                layout="@layout/layout_found_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/displayFoundLocationPaddingBottom"
                android:paddingTop="@dimen/foundLocationPaddingTop"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/search_found_location_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="@dimen/foundLocationTextPaddingEnd"
                    android:paddingStart="@dimen/foundLocationTextPaddingStart"
                    android:text="@string/no_last_known_location_specified" />

                <ImageView
                    android:id="@+id/search_found_location_image_view"
                    android:layout_width="@dimen/foundLocationIconWidth"
                    android:layout_height="@dimen/foundLocationIconHeight"
                    android:layout_marginEnd="@dimen/foundLocationIconMarginEnd"
                    android:layout_marginStart="@dimen/foundLocationIconMarginStart"
                    android:contentDescription="@string/point_location_on_map"
                    app:srcCompat="@drawable/ic_google_maps" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/displayFoundPickersPaddingBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/labelPaddingEnd"
                    android:paddingStart="@dimen/labelPaddingStart"
                    android:textSize="@dimen/labelTextSize"
                    android:text="@string/age"
                    android:textColor="@android:color/black" />

                <inc.ahmedmourad.sherlock.custom.ProperNumberPicker
                    android:id="@+id/search_found_age_number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/displayFoundAgePickerMarginEnd"
                    app:maxValue="30"
                    app:minValue="0"
                    app:value="15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/labelPaddingEnd"
                    android:paddingStart="@dimen/labelPaddingStart"
                    android:textSize="@dimen/labelTextSize"
                    android:text="@string/height"
                    android:textColor="@android:color/black" />

                <inc.ahmedmourad.sherlock.custom.ProperNumberPicker
                    android:id="@+id/search_found_height_number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:maxValue="200"
                    app:minValue="40"
                    app:value="120" />

            </LinearLayout>

            <include
                layout="@layout/layout_found_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/layout_found_skin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/layout_found_hair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/search_found_search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/foundButtonMarginEnd"
                android:layout_marginStart="@dimen/foundButtonMarginStart"
                android:layout_marginTop="@dimen/foundButtonMarginTop"
                android:padding="@dimen/foundButtonPadding"
                android:background="@color/colorAccent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:text="@string/search"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
