<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:backgroundTint="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/placeholder" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingEnd="0dp"
                android:paddingStart="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/ahmed_mourad"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    tools:text="@string/date"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/result_picture"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/child"
                android:scaleType="centerCrop"
                tools:src="@drawable/placeholder"
                app:layout_constraintDimensionRatio="1:1" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/result_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lineSpacingMultiplier="1.2"
            android:maxLines="3"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:scrollHorizontally="true"
            android:textSize="15sp"
            tools:text="Don't you think it's ridiculous that Firebase Realtime Database has so poor querying capabilities?\nI mean It's Google for god's sake!" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_label"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/result_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingEnd="0dp"
                android:paddingStart="4dp"
                android:scrollHorizontally="true"
                android:textSize="15sp"
                tools:text="Yasmeena Plaza, Tanta, Egypt" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
